# Cookiecutter-PyPackage-Poet

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: console_script_setup.md  prompts.md  pypi_release_checklist.md  troubleshooting.md  tutorial.md
hooks/: post_gen_project.py
tests/: __init__,py  test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tasks.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: python-publish.yml
{{cookiecutter.project_slug}}/docs/: .pages  installation.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
